# rust-template

./: Cargo.toml
tests/: test.rs
