[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
readme = "README.md"
categories = [""]
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
homepage = "https://github.com/{{gh-username}}/{{project-name}}"
authors = ["{{authors}}"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]


